# yai

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DATA_POLICY.md  Doxyfile  FOUNDATION.md  GOVERNANCE.md  LAW_COMPATIBILITY.md  LICENSE  Makefile  README.md  SECURITY.md  VERSIONING.md  law-compatibility.v1.json  pyproject.toml
mind/: Cargo.toml
mind/src/: lib.rs  main.rs  models.rs  server.rs
mind/src/agents/: code.rs  historian.rs  knowledge.rs  mod.rs  system.rs  validator.rs
mind/src/bridge/: vault.rs
mind/src/cli/: config.rs  mod.rs
mind/src/cli/commands/: graph.rs  logs.rs  up.rs
mind/src/cognition/providers/: mod.rs
mind/src/cognition/reasoning/: roles.rs
mind/src/control/: chat.rs  cortex.rs  daemon.rs  dsar.rs  events.rs  mod.rs  providers.rs  shell.rs  workspace.rs
mind/src/core/: ai_client.rs  executor.rs  governance.rs  runtime.rs  scheduler.rs  state.rs
mind/src/interface/: config.rs  mod.rs
mind/src/interface/commands/: down.rs  dsar.rs  embed.rs  graph.rs  logs.rs  mod.rs  monitor.rs  providers.rs  sessions.rs  status.rs  tui.rs  up.rs  verify.rs
mind/src/llm/: adapter.rs
mind/src/memory/: core.rs
mind/src/memory/graph/: backend.rs  backend_rpc.rs  facade.rs  mod.rs
mind/src/paths/: mod.rs
mind/src/providers/: mod.rs
mind/src/rag/: context_builder.rs  pipeline.rs
mind/src/rpc/: protocol.rs
mind/src/runtime/: mod.rs  runtime.rs
mind/src/transport/: mod.rs  protocol.rs  uds_server.rs
mind/src/types/: graph.rs
mind/tests/: integration_test.rs  memory_rag.rs
(+2382 files in other folders)
