[package]
name = "yai-mind"
version = "0.1.0"
edition = "2021"
authors = ["Francesco Maiomascio"]
description = "YAI Cognitive Core (Mind Layer - L3)"

[dependencies]
anyhow = "1"

# Identificatori (Mandatorio per RPC Envelope v2)
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

# Serializzazione
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage & Graph
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = "0.6"

# Vector search & Hashing
usearch = "2"
blake3 = "1"

# Networking (Necessario per i futuri Provider Gates)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

# Optional embeddings backends
tokenizers = { version = "0.15", optional = true }
tract-onnx = { version = "0.20", optional = true }
candle-core = { version = "0.5", optional = true }
candle-nn = { version = "0.5", optional = true }
candle-transformers = { version = "0.5", optional = true }

[features]
default = ["embeddings-onnx"]
embeddings-onnx = ["tract-onnx", "tokenizers"]
embeddings-candle = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "tokenizers"
]
# Feature flags per mantenere il vecchio codice isolato mentre ripuliamo
legacy = []
legacy_cognition = []
legacy-providers = ["legacy"]

[dev-dependencies]
memoffset = "0.9"

[[bin]]
name = "yai-mind"
path = "src/main.rs"